feat: deploy setup